Added 3 new blocks: Portgolio, Why Choose Us, Resume. Changed the name of the img folder to images. Added # to the empty hrefs. Formatted the code. Added style reset.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <title>CS Resume</title>
 </head>
@@ -13,14 +14,14 @@
 
             </div>
             <div class="header__navbar">
-                <a class="header__item header__item_active" href="">Home</a>
-                <a class="header__item header__item_active" href="">About</a>
-                <a class="header__item header__item_active" href="">Portfolio</a>
-                <a class="header__item header__item_active" href="">Services</a>
-                <a class="header__item header__item_active" href="">Resume</a>
-                <a class="header__item header__item_active" href="">Client</a>
-                <a class="header__item header__item_active" href="">Blog</a>
-                <a class="header__item header__item_active" href="">Contact</a>
+                <a class="header__item header__item_active" href="#">Home</a>
+                <a class="header__item header__item_active" href="#">About</a>
+                <a class="header__item header__item_active" href="#">Portfolio</a>
+                <a class="header__item header__item_active" href="#">Services</a>
+                <a class="header__item header__item_active" href="#">Resume</a>
+                <a class="header__item header__item_active" href="#">Client</a>
+                <a class="header__item header__item_active" href="#">Blog</a>
+                <a class="header__item header__item_active" href="#">Contact</a>
             </div>
             
                 <button class="header__button button"">Download CV</button>  
@@ -131,17 +132,14 @@
             </div>
          </div>
     </div>
-   <div class="about__wrapper"> 
+    <div class="about__wrapper"> 
     <div class="about">
         <div class="about__title">
             About me
         </div>
         <div class="about__content">
             <div class="about__image">
-                <svg width="475.600555" height="375.607666" viewBox="0 0 475.601 375.608" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <defs/>
-                    <path id="Vector" d="M475.6 0L475.6 375.6L467.82 375.6L451.07 360.43L450.83 360.09L460.08 360.09L460.08 15.51L15.51 15.51L15.51 360.09L111.42 360.09L129.96 375.6L0 375.6L0 0L475.6 0Z" fill="#FE461C" fill-opacity="1.000000" fill-rule="nonzero"/>
-                </svg> 
+                <img src="images/square.png" alt="">
             </div>
             <div class="about__info">
                 <div class="about__name">
@@ -188,6 +186,186 @@
             </div>
         </div>
     </div>
-  </div> 
+    </div>
+    <div class="portfolio">
+        <div class="portfolio__header">
+            <div class="portfolio__title">
+                Portfolio
+            </div>
+            <div class="portfolio__subtitle">
+                Some Of My Creative Work
+            </div>
+            <div class="portfolio__navbar">
+                <a class="portfolio__item portfolio__item_active" href="#">All</a> 
+                <a class="portfolio__item portfolio__item_active" href="#">Mobile</a>
+                <a class="portfolio__item portfolio__item_active" href="#">Website</a> 
+                <a class="portfolio__item portfolio__item_active" href="#">Animation</a> 
+                <a class="portfolio__item portfolio__item_active" href="#">Exclusive</a>       
+            </div>
+        </div>
+        <div class="portfolio__content">
+            <div class="portfolio__row1">
+                <div class="portfolio__card"></div>
+                <div class="portfolio__card_big"></div>
+            </div>
+            <div class="portfolio__row2">
+                <div class="portfolio__card_big">
+                    <div class="portfolio__info">
+                        <span>Mobile Mockup Design<br></span>existing solutions offer to solve ...
+                    </div>
+                </div>
+                <div class="portfolio__card"></div>
+            </div>
+            <div class="portfolio__row3">
+                <div class="portfolio__card"></div>
+                <div class="portfolio__card_big"></div>
+            </div>
+        </div>
+    </div>
+    <div class="services__wrapper">
+        <div class="services">
+            <div class="services__header">
+                <div class="services__title">
+                    Why Choose Us
+                </div>
+                <div class="services__subtitle">
+                    Our Work Services
+                </div>
+            </div>
+            <div class="services__content">
+                <div class="services__card">
+                    <div class="services__card-content">
+                        <div class="sevices__image">
+                            <img src="images/computer_graphic.svg" alt="">
+                        </div>
+                        <div class="services__topic">
+                                Computer Graphic
+                        </div>
+                        <div class="services__info">
+                                Conveniently and proacvenique and idene solutions easyuse enjoy collaboration... 
+                        </div>
+                        <div class="services__button services__button_active">
+                            <button><img src="images/svgviewer-output.svg" alt=""></button>
+                        </div>
+                    </div>    
+                </div>
+                <div class="services__card">
+                    <div class="services__card-content">
+                        <div class="sevices__image">
+                            <img src="images/web_development.svg" alt="">
+                        </div>
+                        <div class="services__topic">
+                                Web Development
+                        </div>
+                        <div class="services__info">
+                            Conveniently and proacvenique and idene solutions easyuse enjoy collaboration...  
+                        </div>
+                        <div class="services__button services__button_active">
+                            <button><img src="images/svgviewer-output.svg" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="services__card">
+                    <div class="services__card-content">
+                        <div class="sevices__image">
+                            <img src="images/UI_UX.svg" alt="">
+                        </div>
+                        <div class="services__topic">
+                            UI/UX Design
+                        </div>
+                        <div class="services__info">
+                            Conveniently and proacvenique and idene solutions easyuse enjoy collaboration... 
+                        </div>
+                        <div class="services__button services__button_active">
+                            <button><img src="images/svgviewer-output.svg" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="services__card">
+                    <div class="services__card-content">
+                        <div class="sevices__image">
+                            <img src="images/web_design.svg" alt="">
+                        </div>
+                        <div class="services__topic">
+                                Web Design
+                        </div>
+                        <div class="services__info">
+                            Conveniently and proacvenique and idene solutions easyuse enjoy collaboration... 
+                        </div>
+                        <div class="services__button services__button_active">
+                            <button><img src="images/svgviewer-output.svg" alt=""></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="resume__wrapper">
+        <div class="resume">
+            <div class="resume__header">
+                <div class="resume__title">
+                    Resume
+                </div>
+                <div class="resume__subtitle">
+                    Skill & Experience
+                </div>             
+            </div>
+            <div class="resume__tab">
+                <div class="resume__navbar-item resume__navbar-item_active">
+                    Design
+                </div>
+                <div class="resume__navbar-item">
+                    Experience
+                </div>
+                <div class="resume__navbar-item">
+                    Education
+                </div>
+            </div>
+            <div class="resume__content">
+                <div class="resume__progress">
+                    <div class="resume__progress-part-illustrator">
+                        <div class="resume__pr-title">
+                            <p>Adobe Aillustrator</p>
+                            <p>90%</p>
+                        </div>
+                        <div class="resume__progressbar-section">
+                            <img src="images/progress-illus.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="resume__progress-part-photoshop">
+                        <div class="resume__pr-title">
+                            <p>Adobe Photoshop</p>
+                            <p>80%</p>
+                        </div>
+                        <div class="resume__progressbar-section">
+                            <img src="images/progress-phot.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="resume__progress-part-after">
+                        <div class="resume__pr-title">
+                            <p>Adobe After Effect</p>
+                            <p>70%</p>
+                        </div>
+                        <div class="resume__progressbar-section">
+                            <img src="images/progress-after.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="resume__progress-part-figma">
+                        <div class="resume__pr-title">
+                            <p>Figma</p>
+                            <p>60%</p>
+                        </div>
+                        <div class="resume__progressbar-section">
+                            <img src="images/progress-figma.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="resume__img">
+                    <img src="images/square.png" alt="">
+                    </svg>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
