added responsive design for all blocks besides header

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <header>
     <div class="header-container">
-        <div class="header__logo">
-
-        </div>
+        <div class="header__logo"></div>
         <div class="header__navbar">
             <a class="header__item header__item_active" href="#">Home</a>
             <a class="header__item header__item_active" href="#">About</a>
