added alts for some images in blog block

--- a/index.html
+++ b/index.html
@@ -427,19 +427,19 @@ customize proactive web services.
                     <div class="blog__card-content">
                         <div class="blog__meta">
                             <div class="blog__part">
-                               <img src="images/blog-admin.svg" alt="">
+                               <img src="images/blog-admin.svg" alt="blog-image">
                                 <div class="blog__meta-text">
                                     Admin
                                 </div>
                             </div>
                             <div class="blog__part">
-                                <img src="images/blog-comment.svg" alt="">
+                                <img src="images/blog-comment.svg" alt="blog-image">
                                  <div class="blog__meta-text">
                                      25
                                  </div>
                              </div>
                              <div class="blog__part">
-                                <img src="images/blog-seen.svg" alt="">
+                                <img src="images/blog-seen.svg" alt="blog-image">
                                  <div class="blog__meta-text">
                                      23k+ view
                                  </div>
@@ -462,19 +462,19 @@ customize proactive web services.
                     <div class="blog__card-content">
                         <div class="blog__meta">
                             <div class="blog__part">
-                               <img src="images/blog-admin.svg" alt="">
+                               <img src="images/blog-admin.svg" alt="blog-image">
                                 <div class="blog__meta-text">
                                     Admin
                                 </div>
                             </div>
                             <div class="blog__part">
-                                <img src="images/blog-comment.svg" alt="">
+                                <img src="images/blog-comment.svg" alt="blog-image">
                                  <div class="blog__meta-text">
                                      25
                                  </div>
                              </div>
                              <div class="blog__part">
-                                <img src="images/blog-seen.svg" alt="">
+                                <img src="images/blog-seen.svg" alt="blog-image">
                                  <div class="blog__meta-text">
                                      23k+ view
                                  </div>
