added burger menu

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         </div>
         
             <button class="header__button button">Download CV</button>  
+            <div class="header__burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
     </div>
 </header>
 <body>
@@ -636,6 +641,7 @@ customize proactive web services.
             </div>
         </div>
     </div>
+    <script src="js/index.js"></script>
 </body>
 <footer>
     All Right Reserved. Designed and Developed by LabArtisan
